pay one product item

--- a/public/admin.html
+++ b/public/admin.html
@@ -465,8 +465,11 @@
                             <div class="container___input__left">
                                 <i class=" exit--search fa-solid fa-arrow-left"></i>
                                 <div class="container__show__head__input__box container__show__shop__head__input__box">
-                                    <input class="show__input__id find-id-shop" type="text"
-                                        placeholder="Nhập mã sản phẩm">
+                                    <div class="find__item__box">
+                                        <input class="show__input__id find-id-shop" type="text"
+                                            placeholder="Nhập mã hoặc tên sản phẩm">
+                                        <i id="cancel__find__item" class="fa-solid fa-xmark"></i>
+                                    </div>
                                     <div class="show__find__id__box">
                                     </div>
                                 </div>
@@ -1296,13 +1299,13 @@
                         </div>
                         <div class="row__content row__content__picture">
                             <div class="row__content__col">
-                                <img src="./img/shop/whey/rule-1-proteins.webp" alt="">
+                                <img src="" alt="">
                                 <input id="content-img-main1" class="content-img-main content-img-main1" type="file"
                                     name="file1" style="display: none">
                                 <label for="content-img-main1">Ảnh chính</label>
                             </div>
                             <div class="row__content__col">
-                                <img src="./img/shop/whey/rule-1-proteins.webp" alt="">
+                                <img src="" alt="">
                                 <input id="content-img-main2" class="content-img-main content-img-main2" type="file"
                                     name="file2" style="display: none">
                                 <label for="content-img-main2">Ảnh phụ</label>
