--- a/public/navigation/wheyshop_tracking.html
+++ b/public/navigation/wheyshop_tracking.html
@@ -208,6 +208,109 @@
                     </div>
                     <div class="tab-content">
                         <div class="tab-content-wrapper">
+                            <div class="order-details ">
+                                <div class="title">
+                                    <button class="open">
+                                        <i class="fa-solid fa-bars"></i>
+                                    </button>
+                                    <div class="title-order-details">
+                                        #Đơn hàng
+                                        <span>
+                                            order0001
+                                        </span>
+                                    </div>
+                                    <button class="close-details">
+                                        <i class="fa-solid fa-xmark"></i>
+                                    </button>
+                                </div>
+                                <div class="transportation-process complete">
+                                    <div class="transportation-process-wrapper">
+                                        <div class="box-transport">
+                                            <div class="wrapper-circle zero">
+                                                <div class="circle zero"><i class="fa-solid fa-check"></i></div>
+                                            </div>
+                                            <div class="wrapper-line">
+                                                <div class="line zero"></div>
+                                            </div>
+
+
+                                            <div class="wrapper-circle one">
+                                                <div class="circle one"><i class="fa-solid fa-box-open"></i></div>
+                                            </div>
+                                            <div class="wrapper-line">
+                                                <div class="line one"></div>
+                                            </div>
+
+
+                                            <div class="wrapper-circle two">
+                                                <div class="circle two"><i class="fa-solid fa-truck-fast"></i></div>
+                                            </div>
+                                            <div class="wrapper-line">
+                                                <div class="line two"></div>
+                                            </div>
+
+
+                                            <div class="wrapper-circle three">
+                                                <div class="circle three"><i class="fa-solid fa-heart"></i></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="list-order">
+                                    <div class="list-order-wrapper">
+                                        <div class="product">
+                                            <div class="product-wrapper">
+                                                <div class="product-img">
+                                                    <img src="../img/shop/whey/100-whey-gold-standard-5lbs-2-3kg-13-2x.webp"
+                                                        alt="">
+                                                </div>
+                                                <div class="product-information">
+                                                    <div class="information-group">
+                                                        <div class="product-name">
+                                                            100% Whey Gold Standard 5Lbs (2.3kg)
+                                                        </div>
+                                                        <div class="product-quantity">
+                                                            Số lượng:
+                                                            <span>
+                                                                1
+                                                            </span>
+                                                        </div>
+                                                    </div>
+                                                    <div class="product-price">
+                                                        <span>
+                                                            60,000
+                                                        </span>
+                                                        ₫
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="product"></div>
+                                        <div class="product"></div>
+                                        <div class="product"></div>
+                                        <div class="product"></div>
+                                        <div class="product"></div>
+                                    </div>
+                                </div>
+                                <div class="total details">
+                                    <div class="total-products">
+                                        <span>
+                                            100
+                                        </span>
+                                        sản phẩm
+                                    </div>
+                                    <div class="total-price">
+                                        <img src="../img/shop/icon/shield.png" alt="">
+                                        Thành tiền:
+                                        <div>
+                                            <span>
+                                                1,650,000
+                                            </span>
+                                            ₫
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="content active">
                                 <div class="title">
                                     <button class="open">
@@ -217,7 +320,7 @@
                                 </div>
                                 <div class="list-order">
                                     <div class="list-order-wrapper">
-                                        <div class="order">
+                                        <div class="order ">
                                             <div class="order-wrapper">
                                                 <div class="header-order">
                                                     <div class="brand-offical">
@@ -281,9 +384,9 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="order"></div>
-                                        <div class="order"></div>
-                                        <div class="order"></div>
+                                        <div class="order 1"></div>
+                                        <div class="order 2"></div>
+                                        <div class="order 3"></div>
                                         <div class="order"></div>
                                         <div class="order"></div>
                                         <div class="order"></div>
@@ -551,109 +654,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="../navigation_javascript/wheyshop.js"></script>
     <script src="../navigation_javascript/wheyshop_tracking.js"></script>
-    <script>
-
-
-        const searchInput = document.querySelector('.search-input');
-        setInterval(() => {
-            searchInput.placeholder = "whey";
-            setTimeout(() => {
-                searchInput.placeholder = "dầu cá omega3";
-                setTimeout(() => {
-                    searchInput.placeholder = "sữa tăng cân";
-                }, 3000);
-            }, 3000);
-        }, 6000);
-
-        const home = document.querySelector('.home-button')
-        home.onclick = function () {
-            window.location.href = 'wheyshop.html'
-        }
-
-        const cartButton = document.querySelector('.cart-button button');
-        const cartShow = document.querySelector('.cart-show');
-        const shadow = document.querySelector('.shadow');
-        cartButton.onclick = function () {
-
-            if (cartShow.style.display == 'none' || cartShow.style.display == '') {
-                cartShow.style.display = 'flex';
-                shadow.style.display = 'flex';
-                html.style.overflow = 'hidden'
-                cartShow.style.animation = 'fly-to-top .35s ease-in-out forwards';
-                shadow.style.animation = 'fadeIn .35s ease-in-out forwards';
-            } else {
-                cartShow.style.animation = 'fly-to-bot .5s ease-in-out forwards';
-                shadow.style.animation = 'fadeOut .5s ease-in-out forwards';
-                html.style.overflow = 'auto'
-                setTimeout(() => {
-                    shadow.style.display = 'none';
-                    cartShow.style.display = 'none'
-                }, 500);
-            }
-        }
-        shadow.onclick = function () {
-            cartShow.style.animation = 'fly-to-bot .5s ease-in-out forwards';
-            shadow.style.animation = 'fadeOut .5s ease-in-out forwards';
-            html.style.overflow = 'auto'
-            setTimeout(() => {
-                shadow.style.display = 'none';
-                cartShow.style.display = 'none'
-            }, 500);
-        }
-
-        setTimeout(() => {
-            const links = document.querySelectorAll('a');
-            links.forEach(function (link) {
-                link.addEventListener('click', function (e) {
-                    e.preventDefault();
-                });
-            });
-
-
-
-            //const html = document.querySelector('html');
-            //const container = document.querySelector('.container');
-            //const header = document.querySelector('.header');
-            //const mainContent = document.querySelector('.main-content');
-            //const listItem = document.querySelectorAll('.item');
-            //const detailsItem = document.querySelector('.product-details');
-            //const productNameElement = document.querySelector('.name-product span');
-            //const productCostElement = document.querySelector('.cost');
-            //const totalCostElement = document.querySelector('.total span');
-            //const namePageInPathBar = document.querySelector('.page-products a');
-            //const nameProductInPathBar = document.querySelector('.current-product a');
-            //const mainImgElement = document.querySelector('.main-img img');
-            //const productTitleElement = document.querySelector('.product-title h1');
-            //listItem.forEach(item => {
-            //    item.addEventListener('click', 
-            //    function (event) {
-            //        // event.preventDefault();
-            //
-            //        const productName = item.querySelector('.name span').textContent;
-            //        const productCost = item.querySelector('.cost').textContent.trim();
-            //        const productImgSrc = item.querySelector('.item-img img').getAttribute('src');
-            //        const productTitle = item.closest('.product-style').querySelector('.product-title h1').textContent;
-            //
-            //        productNameElement.textContent = productName;
-            //        productCostElement.textContent = productCost;
-            //        totalCostElement.textContent = productCost;
-            //        namePageInPathBar.textContent = productTitle;
-            //        nameProductInPathBar.textContent = productName;
-            //        mainImgElement.setAttribute('src', productImgSrc);
-            //
-            //        detailsItem.style.display = 'flex';
-            //        header.style.position = 'fixed'
-            //        mainContent.style.opacity = '0';
-            //        html.style.overflow = 'hidden';
-            //
-            //    }
-            //    );
-            //});
-
-        }, 1000)
-
-
-    </script>
 
 </body>
 
