--- a/public/navigation/information_account.html
+++ b/public/navigation/information_account.html
@@ -266,7 +266,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div id="table1" class="table">
+                    <div id="table1" class="">
                         <div class="person__information">
                             <div class="border__top">
                                 <div class="rows">
@@ -340,7 +340,7 @@
                             </div>
                         </div>
                     </div>
-                    <div id="table2" class="table">
+                    <div id="table2" class="">
                         <div class="profine__information">
                             <div class="title__table">
                                 <div class="title__table__group">
@@ -443,7 +443,7 @@
                             </div>
                         </div>
                     </div>
-                    <div id="table3" class="table">
+                    <div id="table3" class="">
                         <div class="account__information">
                             <div class="title__table">
                                 <div class="title__table__group">
@@ -519,7 +519,7 @@
                             </div>
                         </div>
                     </div>
-                    <div id="table3" class="table">
+                    <div id="table4" class="">
                         <div class="account__information">
                             <div class="title__table">
                                 <div class="title__table__group">
