--- a/public/navigation/information_card_TS.html
+++ b/public/navigation/information_card_TS.html
@@ -255,14 +255,14 @@
                         <div class="page__header night__mode">
                             <div class="night__mode__selection">
                                 <button class="night__mode__button">
-                                    <i class='bx bxs-moon'></i>
+                                    <i class="fa-solid fa-moon"></i>
                                 </button>
                             </div>
                         </div>
                     </div>
                     <div id="table1" class="first__table">
                         <div class="card__information">
-                            <div class="border__top">
+                            <div class=" ">
                                 <div class="rows">
                                     <div class="information__card">
                                         <div class="information__card first__part">
@@ -563,12 +563,10 @@
                                                         </div>
                                                     </div>
 
-                                                    <div class="row">
-                                                        <div class="row__title">
-                                                            Lưu ý: Bạn hãy cân nhắc trước khi hủy lịch tập, không thể
-                                                            hoàn lại thao tác này, bạn sẽ mất tiền và chúng tôi sẽ không
-                                                            chịu trách nhiệm!
-                                                        </div>
+                                                    <div class="row_content">
+                                                        Lưu ý: Bạn hãy cân nhắc trước khi hủy lịch tập, không thể
+                                                        hoàn lại thao tác này, bạn sẽ mất tiền và chúng tôi sẽ không
+                                                        chịu trách nhiệm!
 
                                                     </div>
                                                     <div class="row__final">
