--- a/public/index.html
+++ b/public/index.html
@@ -301,7 +301,7 @@
             <div class="container__home">
                 <div class="video-title">
                     <video autoplay loop muted playsinline> 
-                        <!-- <source src="./video/video.mp4" type="video/mp4" /> -->
+                        <source src="./video/video.mp4" type="video/mp4" />
                     </video>
                 </div>
                 <div class="home__about">
