--- a/public/navigation/information_card_TS.html
+++ b/public/navigation/information_card_TS.html
@@ -398,7 +398,7 @@
                                     <button id="button1" class="button__in__operation">
                                         Đăng ký lịch
                                     </button>
-                                    <form id="form-register" class="form1">
+                                    <form id="form-register-calendar" class="form1">
                                         <div class="registration__traning__schedule">
                                             <div class="table">
                                                 <div id="training-schedule" class="first__training__schedule">
@@ -410,7 +410,7 @@
                                                             <i class="fa-regular fa-circle-xmark"></i>
                                                         </div>
                                                     </div>
-                                                    <div class="row">
+                                                    <!-- <div class="row">
                                                         <div class="row__title">
                                                             Loại thẻ:
                                                         </div>
@@ -433,7 +433,7 @@
                                                                 <label for="card3">ADVANCE</label><br>
                                                             </div>
                                                         </div>
-                                                    </div>
+                                                    </div> -->
                                                     <div class="row">
                                                         <div class="row__title">
                                                             Ngày:
@@ -638,94 +638,6 @@
                                         <div class="row__content">
                                             Cảm ơn bạn đã chú ý đến chú ý này, sự chú ý 
                                             của bạn sẽ được chú ý !
-                                        </div>
-                                    </div>
-                                </div>
-                            </div> -->
-                            <!-- <div class="table">
-                                <div id="training-schedule" class="second__training__schedule">
-                                    <div class="row">
-                                        <div class="row__title">
-                                            Ngày:
-                                        </div>
-                                        <div class="row__content">
-                                            1/3/2024
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="row__title">
-                                            Thời gian:
-                                        </div>
-                                        <div class="row__content">
-                                            13H10
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="row__title">
-                                            Môn:
-                                        </div>
-                                        <div class="row__content">
-                                            Gym
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="row__title">
-                                            Huấn luyện viên:
-                                        </div>
-                                        <div class="row__content">
-                                            David Truong
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="row__title">
-                                            Ghi chú:
-                                        </div>
-                                        <div class="row__content">
-                                            không có gì đâu mà đọc
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="table">
-                                <div id="training-schedule" class="third__training__schedule">
-                                    <div class="row">
-                                        <div class="row__title">
-                                            Ngày:
-                                        </div>
-                                        <div class="row__content">
-                                            1/3/2024
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="row__title">
-                                            Thời gian:
-                                        </div>
-                                        <div class="row__content">
-                                            13H10
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="row__title">
-                                            Môn:
-                                        </div>
-                                        <div class="row__content">
-                                            Gym
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="row__title">
-                                            Huấn luyện viên:
-                                        </div>
-                                        <div class="row__content">
-                                            David Truong
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="row__title">
-                                            Ghi chú:
-                                        </div>
-                                        <div class="row__content">
-                                            ở trên kia đã ghi là không có gì rồi mà, đọc tiếp làm gì.
                                         </div>
                                     </div>
                                 </div>
@@ -1138,6 +1050,25 @@
                 <div class="loader-square"></div>
                 <div class="loader-square"></div>
             </div>
+
+            <div class="modal__body__box chage-page">
+                <p class="edit-title">Bạn chưa đăng ký thẻ thành viên</p>
+                <form id="change-page" action="/your-name-url" method="POST">
+                    <div class="user-box">
+                        <label class="edit-label">Chuyển trang sau <span>5</span>s</label>
+                    </div>
+                    <div class="submit__row">
+                        <button id="submitChangePage" type="submit">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            Hủy
+                        </button>
+                    </div>
+                </form>
+            </div>
+
         </div>
     </div>
     <div class="nen_mo"></div>
