--- a/public/navigation/wheyshop.html
+++ b/public/navigation/wheyshop.html
@@ -336,6 +336,12 @@
                                 <div class="slider-item">
                                     <img src="../img/shop/welcome.jpg" alt="">
                                 </div>
+                                <div class="slider-banner">
+                                    <img src="../img/shop/vector-awesome-green-sale-banner-voucher-for-marketing-design.jpg" alt="">
+                                    <img src="../img/shop/sale-banner-template-design-limited-time-only-sale-up-to-50-percent-off-special-offer-promotion-discount-banner-vector.jpg" alt="">
+                                    
+                                    
+                                </div>
                             </div>
                         </div>
                     </div>
