--- a/public/index.html
+++ b/public/index.html
@@ -609,11 +609,11 @@
                 </div>
                 <div class="container-third">
                     <div class="container-third-wrapper">
+                        <div class="third-title">
+                            Nâng tầm trải nghiệm tập luyện
+                        </div>
                         <div class="third-style">
                             <div class="third-style-left">
-                                <div class="third-title">
-                                    Nâng tầm trải nghiệm tập luyện
-                                </div>
                                 <div class="third-content">
                                     <p>
                                         Hệ thống phòng tập đầu tiên kiến tạo nên mô hình tập luyện chuyên nghiệp, đón đầu xu hướng tương lai.
@@ -630,6 +630,49 @@
                         </div>
                     </div>
                 </div>
+                <div class="container-forth">
+                    <div class="container-forth-wrapper">
+                        <div class="forth-title">
+                            GIÁ TRỊ CỐT LÕI CỦA CHÚNG TÔI
+                        </div>
+                        <div class="forth-style">
+                            <div class="forth-style-one">
+                                <p>
+                                    Chăm sóc
+                                </p>
+                                <p>
+                                    Chúng tôi quan tâm đến khách hàng và con người của chúng tôi
+                                </p>
+                                <p>
+                                    Từ việc ưu tiên hạnh phúc, tăng trưởng và sự hài lòng của khách hàng và nhân viên của chúng tôi đến đảm bảo rằng họ cảm thấy có giá trị và được hỗ trợ trong suốt hành trình của họ.
+                                </p>
+                            </div>
+                            <div class="forth-style-two">
+                                <p>
+                                    VĂN HOÁ
+                                </p>
+                                <p>
+                                    Chúng tôi thúc đẩy Văn hóa Tôn trọng, Làm việc theo nhóm, Học tập và Minh bạch
+                                </p>
+                                <p>
+                                    Từ việc tôn vinh quan điểm độc đáo của mọi người và tin tưởng vào các mục tiêu hỗ trợ, chúng tôi thúc đẩy một văn hóa học tập và phát triển không ngừng.
+                                </p>
+                            </div>
+                            <div class="forth-style-three">
+                                <p>
+                                    CAM KẾT
+                                </p>
+                                <p>
+                                    Chúng tôi nắm lấy Cam kết Xuất sắc của chúng tôi
+                                </p>
+                                <p>
+                                    Từ việc liên tục tìm cách cải thiện, chúng tôi ưu tiên đào tạo nội bộ và bên ngoài chất lượng đến Luôn cập nhật và mang lại kết quả đặc biệt.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
             </div>
             
             <!-- LE VAN TIEN -->
