--- a/public/admin.html
+++ b/public/admin.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./font/fontawesome-free-6.4.0-web/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="./css/index.css">
-    <!-- <link rel="stylesheet" href="./css/header.css"> -->
+    <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./navigation_css/toast.css">
     <link rel="stylesheet" href="./css/keyframes.css">
