--- a/public/index copy.html
+++ b/public/index copy.html
@@ -397,6 +397,42 @@
             /* z-index: 0; */
             transition: all .5s;
         }
+
+        .slider {
+            padding: 300px 0;
+            height: 500px;
+            width: 500px;
+            margin: 0 auto;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .slider-list {
+            height: 100%;
+            width: 100%;
+            background-color: #666;
+            display: flex;
+            overflow-x: scroll;
+            scroll-behavior: smooth;
+        }
+
+        .item {
+            content: '';
+            width: 100%;
+            height: 100%;
+            background-color: green;
+            flex-shrink: 0;
+        }
+
+        .item:nth-child(2) {
+            background-color: burlywood;
+        }
+
+        .item:nth-child(3) {
+            background-color: palevioletred;
+        }
     </style>
 </head>
 
@@ -615,6 +651,19 @@
         </div>
     </div>
 
+    <div class="slider">
+        <div id="sliderlist" class="slider-list">
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+        </div>
+        <span>
+            <button id="pre"><i class="fa-solid fa-chevron-left"></i></button>
+            <button id="next"><i class="fa-solid fa-chevron-right"></i></button>
+        </span>
+    </div>
+
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -642,6 +691,21 @@
             });
 
         })
+
+
+
+        document.getElementById('next').onclick = function () {
+            const widthItem = document.querySelector('.item').offsetWidth;
+            document.getElementById('sliderlist').scrollLeft += widthItem;
+        };
+        document.getElementById('pre').onclick = function () {
+            const widthItem = document.querySelector('.item').offsetWidth;
+            document.getElementById('sliderlist').scrollLeft -= widthItem;
+        };
+
+
+
+
     </script>
 </body>
 
