change link header

--- a/public/index.html
+++ b/public/index.html
@@ -1477,7 +1477,7 @@
     <script type="module" src="./navigation_javascript/login.js"></script>
     <script type="module" src="./src/validate.js"></script>
     <script type="module" src="./src/toast.js"></script>
-    <!-- <script type="module" src="./src/client.js"></script> -->
+    <script type="module" src="./src/client.js"></script>
     <script>
         // JavaScript
         var items = document.querySelectorAll('.item-second');
