change Assiant name hiden message

--- a/public/navigation/informationItem.html
+++ b/public/navigation/informationItem.html
@@ -214,7 +214,7 @@
                             <img src="../img/icon/closeAi.jpg" alt="">
                         </div>
                         <div class="assistant-name">
-                            Nguyễn Thị Vân
+                            Nhân viên hỗ trợ
                             <span>
                                 Assiant
                             </span>
