--- a/public/navigation/information_card_TS.html
+++ b/public/navigation/information_card_TS.html
@@ -212,7 +212,7 @@
                             <img src="../img/icon/closeAi.jpg" alt="">
                         </div>
                         <div class="assistant-name">
-                            Nguyễn Thị Vân
+                            Nhân viên hỗ trợ
                             <span>
                                 Assiant
                             </span>
