--- a/public/navigation/wheyshop_tracking.html
+++ b/public/navigation/wheyshop_tracking.html
@@ -966,7 +966,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     
     <script type="module" src="../navigation_javascript/wheyshop_tracking.js"></script>
-    <script type="module" src="../src/client.js"></script>
+    <!-- <script type="module" src="../src/client.js"></script> -->
 
 
 </body>
