--- a/public/navigation/wheyshop.html
+++ b/public/navigation/wheyshop.html
@@ -2846,7 +2846,7 @@
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="module" src="../navigation_javascript/wheyshop.js"></script>
-    <script type="module" src="../src/client.js"></script>
+    <!-- <script type="module" src="../src/client.js"></script> -->
 
     <script>
 
